--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="">
     <meta name="viewport"
           content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>主页</title>
+    <title>少儿俱乐部</title>
 
     <!-- Set render engine for 360 browser -->
     <meta name="renderer" content="webkit">
@@ -47,15 +47,27 @@
 
 </head>
 <body class="main-body">
-<!--<div class="main-top-bar">-->
-<!--<div class="am-g main-top">-->
-<!--<div class="am-u-sm-3"><span class="main-top-text">一起躁</span></div>-->
-<!--<div class="am-u-sm-6" style="color: grey;"><a id="datingRequest" style="color:grey;display: block">躁友信息</a>-->
-<!--</div>-->
-<!--<div class="am-u-sm-3" style="color: grey;"><a id="individualInfo" style="color:grey;display: block">我的信息</a>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
+<div class="ad-container" style="margin-top: 12px">
+    <span><span style="color: red">友情提醒</span>:活动发起由每个俱乐部负责人发起,请各位球友  点击“一站式预约”后,再点击“我要参与”参与活动。</span>
+
+    <div class="ad-info" style="padding:5px 2px 5px 4px">
+        <span>展示信息:发起人工会logo、工会名称、活动时间(开始 时间、结束时间)、场馆名称、场馆地点、教练(教练信 息从哪里来待确定)、球友(球友显示微信头像)</span>
+        <div class="m-footer"><button class="m-btn">我要预约</button></div>
+    </div>
+    <div class="ad-info" style="padding:5px 2px 5px 4px">
+        <span>展示信息:发起人工会logo、工会名称、活动时间(开始 时间、结束时间)、场馆名称、场馆地点、教练(教练信 息从哪里来待确定)、球友(球友显示微信头像)</span>
+        <div class="m-footer"><button class="m-btn">我要预约</button></div>
+    </div>
+    <div class="ad-info" style="padding:5px 2px 5px 4px">
+        <span>展示信息:发起人工会logo、工会名称、活动时间(开始 时间、结束时间)、场馆名称、场馆地点、教练(教练信 息从哪里来待确定)、球友(球友显示微信头像)</span>
+        <div class="m-footer"><button class="m-btn">我要预约</button></div>
+    </div>
+    <div class="ad-info" style="padding:5px 2px 5px 4px">
+        <span>展示信息:发起人工会logo、工会名称、活动时间(开始 时间、结束时间)、场馆名称、场馆地点、教练(教练信 息从哪里来待确定)、球友(球友显示微信头像)</span>
+        <div class="m-footer"><button class="m-btn">我要预约</button></div>
+    </div>
+</div>
+
 <div id="main-list" class="main-list"></div>
 <!--<div class="main-bottom-bar">-->
 <!--<a href="#" id="imgUrl" style="display: block">-->
