--- a/src/main/webapp/myHealth.html
+++ b/src/main/webapp/myHealth.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="">
     <meta name="viewport"
           content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>我的健康</title>
+    <title>健康报告</title>
 
     <!-- Set render engine for 360 browser -->
     <meta name="renderer" content="webkit">
