--- a/src/main/webapp/onlineInquiry.html
+++ b/src/main/webapp/onlineInquiry.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="">
     <meta name="viewport"
           content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>线上问诊</title>
+    <title>在线问诊</title>
 
     <!-- Set render engine for 360 browser -->
     <meta name="renderer" content="webkit">
@@ -39,40 +39,52 @@
     <script src="assets/js/amazeui.min.js"></script>
 </head>
 
-<body>
-<header data-am-widget="slider" class="am-slider am-slider-a1" data-am-slider='{"directionNav":false}'>
-    <ul class="am-slides">
-        <li>
-            <img src="./i/banner1.png">
-
-        </li>
-        <li>
-            <img src="./i/banner2.png">
-
-        </li>
-        <li>
-            <img src="./i/banner3.png">
-
-        </li>
+<body  style="padding-top: 20px;padding-left: 10px;padding-right: 10px;text-align: center;background-color: #ebebeb">
+<div class="oi-content" style="text-align: left">
+    <span>在线问诊服务:客户可下载全程健康助手APP应用或拨打 400-112-1881 服务热线,全职医生7×14小时在线候诊。</span>
+    <span style="display: block">【服务期:1年】</span>
+    <ul style="margin-top: 0;padding-left: 1em">
+        <li>常见病、多发病、慢性病等日常健康问题问诊、咨询</li>
+        <li>个人既往检验、检查报告解读</li>
+        <li>就医前的诊前辅导,提供专业的就诊服务建议</li>
     </ul>
-</header>
+    <P style="margin-top: 30px">扫描下方二维码,可下载全程健康助手APP:</P>
 
-<section class="am-container jm-content">
-    <h2 class="jm-title" style="padding-top: 15px">[问诊须知]</h2>
-    <span>奇羽记免费为会员提供骨密度测试、人体成份分析、运动有氧能力、基本体征测试。测试报告会通过微信推送到会员［我的健康报告］菜单里。体检全部由万达健康免费提供。</span>
-    <hr data-am-widget="divider" style="margin: 1rem auto" class="am-divider am-divider-dotted"/>
-
-</section>
-<!--<hr data-am-widget="divider" style="margin: 1rem auto" class="am-divider am-divider-default"/>-->
-<section class="am-container jm-content">
-    <p style="color: #666666;font-size: 15px;margin-bottom: 5px;">发送你健康疑惑，由私人医生在线免费答疑解惑</p>
-
-    <textarea class="ad-content" style="margin-bottom:15px;height:100px;width: 100%;resize: none" rows="5" id="doc-ta-1"></textarea>
-</section>
-
-<div class="jm-btn">
-    <button class="am-btn am-btn-secondary" data-am-modal="{target: '#my-alert'}">健康定制</button>
 </div>
+<img src="i/download.jpg" style="margin: 0 auto;width: 200px;height: 200px;">
+<!--<header data-am-widget="slider" class="am-slider am-slider-a1" data-am-slider='{"directionNav":false}'>-->
+    <!--<ul class="am-slides">-->
+        <!--<li>-->
+            <!--<img src="./i/banner1.png">-->
+
+        <!--</li>-->
+        <!--<li>-->
+            <!--<img src="./i/banner2.png">-->
+
+        <!--</li>-->
+        <!--<li>-->
+            <!--<img src="./i/banner3.png">-->
+
+        <!--</li>-->
+    <!--</ul>-->
+<!--</header>-->
+
+<!--<section class="am-container jm-content">-->
+    <!--<h2 class="jm-title" style="padding-top: 15px">[问诊须知]</h2>-->
+    <!--<span>奇羽记免费为会员提供骨密度测试、人体成份分析、运动有氧能力、基本体征测试。测试报告会通过微信推送到会员［我的健康报告］菜单里。体检全部由万达健康免费提供。</span>-->
+    <!--<hr data-am-widget="divider" style="margin: 1rem auto" class="am-divider am-divider-dotted"/>-->
+
+<!--</section>-->
+<!--&lt;!&ndash;<hr data-am-widget="divider" style="margin: 1rem auto" class="am-divider am-divider-default"/>&ndash;&gt;-->
+<!--<section class="am-container jm-content">-->
+    <!--<p style="color: #666666;font-size: 15px;margin-bottom: 5px;">发送你健康疑惑，由私人医生在线免费答疑解惑</p>-->
+
+    <!--<textarea class="ad-content" style="margin-bottom:15px;height:100px;width: 100%;resize: none" rows="5" id="doc-ta-1"></textarea>-->
+<!--</section>-->
+
+<!--<div class="jm-btn">-->
+    <!--<button class="am-btn am-btn-secondary" data-am-modal="{target: '#my-alert'}">健康定制</button>-->
+<!--</div>-->
 
 <div class="am-modal am-modal-alert" tabindex="-1" id="my-alert">
     <div class="am-modal-dialog">
