--- a/src/main/webapp/timeLine.html
+++ b/src/main/webapp/timeLine.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="">
     <meta name="viewport"
           content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>时光轴</title>
+    <title>我的活动</title>
 
     <!-- Set render engine for 360 browser -->
     <meta name="renderer" content="webkit">
